# MondrianBlocksProject

./: .gitignore  CMakeLists.txt  README.md  blocks.cpp  blocks.hpp  brainstorm.txt  field.cpp  field.hpp  fieldVisualization.drawio  main.cpp  menu.cpp  menu.hpp  rules.cpp  rules.hpp  start_project.bat  stats.cpp  stats.hpp  template.cpp  template.hpp  uml.drawio  win.cpp  win.hpp
Ideen/: brainstorm.txt
Programm/: blocks.cpp  blocks.hpp  field.cpp  field.hpp  main.cpp  menu.cpp  menu.hpp  template.cpp  template.hpp
UML/: uml.drawio
output/src/: blocks.cpp  blocks.hpp  field.cpp  menu.cpp  rules.cpp  template.hpp  win.cpp
output/test/: blockTest.cpp  templateTest.cpp  winTest.cpp
src/: blocks.cpp  field.hpp  game.hpp  main.cpp  menu.cpp  menu.hpp  rules.cpp  rules.hpp  stats.cpp  stats.hpp  win.cpp  win.hpp
test/: CMakeLists.txt  blockTest.cpp  fieldTest.cpp  gameTest.cpp  menuTest.cpp  rulesTest.cpp
